--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "author": "Christopher Almquist",
-    "name": "static-server",
+    "name": "calmquist.static-server",
     "version": "0.1.1",
     "main": "static-server"
 }
